--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,4 +44,5 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          sleep $(shuf -i 10-300 -n 1)
           python3 ./dailyFudan.py '${{ secrets.FUDAN }}'
